# RustifyTS

./: .gitignore  Cargo.toml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/: 01_project_infrastructure.md  02_parser_layer.md  03_semantic_analysis.md  04_semantic_refactor_core.md  05_rust_ast_layer.md  06_code_generation.md  07_integration_testing.md
.planning/phases/02-parser/: 02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-CONTEXT.md  02-PLAN.md  02-RESEARCH.md  PLAN.md
.planning/phases/03-semantic/: 03-00-PLAN.md  03-00-SUMMARY.md  03-01-PLAN.md  03-01a-PLAN.md  03-01a-SUMMARY.md  03-01b-PLAN.md  03-01b-SUMMARY.md  03-02-PLAN.md  03-02a-PLAN.md  03-02a-SUMMARY.md  03-02b-PLAN.md  03-02b-SUMMARY.md  03-03-PLAN.md  03-03a-PLAN.md  03-03a-SUMMARY.md  03-03b-PLAN.md  03-03b-SUMMARY.md  03-CONTEXT.md  03-GAP-01-PLAN.md  03-GAP-01-SUMMARY.md  03-GAP-02-PLAN.md  03-GAP-02-SUMMARY.md  03-GAP-03-PLAN.md  03-GAP-03-SUMMARY.md  03-GAP-04-PLAN.md  03-GAP-04-SUMMARY.md  03-GAP-05-PLAN.md  03-GAP-05-SUMMARY.md  03-GAP-06-PLAN.md  03-GAP-07-PLAN.md  03-GAP-07-SUMMARY.md  03-GAP-08-PLAN.md  03-GAP-08-SUMMARY.md  03-GAP-09-SUMMARY.md  03-GAP-CLOSURE-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-refactor/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-CONTEXT.md  04-PLANNING-SUMMARY.md  04-RESEARCH.md
.planning/research/: SUMMARY.md
deno-bridge/: deno_parser.ts
src/: lib.rs
src/parser/: error.rs  mod.rs
src/parser/ast/: mod.rs  node.rs  (+3 more)
src/semantic/: analyzer.rs  mod.rs
tests/: parser_integration.rs
(+31 files in other folders)
