[package]
name = "RustifyTS"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rmp-serde = "1.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "process", "io-util", "time", "fs", "macros"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
miette = { version = "7.2", features = ["fancy"] }
bumpalo = "3.16"
clap = { version = "4.5.60", features = ["derive"] }
async-trait = "0.1.82"
lasso = "0.7.3"
hashbrown = "0.14.5"
fxhash = "0.2.1"
rustc-hash = "2.1.1"


[features]
default = ["spans"]
spans = []
